--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,3 +18,7 @@ galaxy_info:
       - all
 dependencies:
   - src: geerlingguy.ntp
+  - src: https://github.com/nshenry03/ansible-role-bash
+    name: nshenry03.bash
+  - src: https://github.com/nshenry03/ansible-role-vim
+    name: nshenry03.vim
