--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,6 +4,12 @@
   vars:
     ntp_enabled: false
     ntp_manage_config: true
+    user_list:
+      - name: jdoe
+        full_name: John Doe
+        initials: JD
+        email: john.doe@example.com
+        organization: Acme, Inc.
 
   pre_tasks:
     - name: Update apt cache.
